--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jade": "~1.11.0",
     "mongoose": "^4.11.11",
     "morgan": "~1.8.1",
+    "opn": "^5.1.0",
     "pug": "^2.0.0-rc.4",
     "request": "^2.83.0",
     "serve-favicon": "~2.4.2"
